force-app/main/default/objects/DC_Tenant_Power__c/DC_Tenant_Power__c.object-meta.xml
<CustomObject>
    <label>Tenant Power</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tenants Power</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>