force-app/main/default/objects/DC_Tenant_Power__c/fields/Committed_Power__c.field-meta.xml
<CustomField>
    <fullName>Committed_Power__c</fullName>
    <description>The total power the tenant has contractual rights to use.</description>
    <label>Committed Power</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>