force-app/main/default/objects/DC_Tenant_Power__c/fields/Connected_Power__c.field-meta.xml
<CustomField>
    <fullName>Connected_Power__c</fullName>
    <description>The total power connected that the tenant could draw based on the infrastructure connected to this space</description>
    <label>Connected Power</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>