force-app/main/default/objects/DC_Tenant_Power__c/fields/Power_Source__c.field-meta.xml
<CustomField>
    <fullName>Power_Source__c</fullName>
    <description>What type of power source is this coming from?</description>
    <label>Power Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main Utility</fullName>
            </value>
            <value>
                <fullName>Switchgear</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>PDU RPP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>