force-app/main/default/objects/DC_Tenant_Power__c/fields/Power_Source_Main_Utility__c.field-meta.xml
<CustomField>
    <fullName>Power_Source_Main_Utility__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The power source of this Tenant Suite - at least one is required. No more than one allowed.</description>
    <label>Power Source - Main Utility</label>
    <referenceTo>DC_Main_Utility__c</referenceTo>
    <relationshipLabel>Tenants Power</relationshipLabel>
    <relationshipName>Tenants_Power</relationshipName>
    <type>Lookup</type>
</CustomField>