force-app/main/default/objects/DC_Tenant_Power__c/fields/Power_Source_Switchgear__c.field-meta.xml
<CustomField>
    <fullName>Power_Source_Switchgear__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The power source of this Tenant Suite - at least one is required. No more than one allowed.</description>
    <label>Power Source - Switchgear</label>
    <referenceTo>DC_Switchgear_Object__c</referenceTo>
    <relationshipLabel>Tenants Power</relationshipLabel>
    <relationshipName>Tenants_Power</relationshipName>
    <type>Lookup</type>
</CustomField>