force-app/main/default/objects/DC_Tenant_Power__c/fields/Tenant_Suite__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Suite__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Tenant Suite that this power is being delivered to.</description>
    <label>Tenant Suite</label>
    <referenceTo>DC_Tenant_Suite__c</referenceTo>
    <relationshipLabel>Tenants Power</relationshipLabel>
    <relationshipName>Tenants_Power</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>